--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines":{
+    "node":"16.13.1"
+  },
   "scripts": {
     "start": "nodemon src/app.js",
     "dev": "nodemon src/app.js"
